@@ -1,17 +1,0 @@
-\name{croche}
-\alias{croche}
-\docType{data}
-\title{
-Zooplankton
-}
-\description{
-Real community data.
-}
-\usage{data(croche)}
-\format{
-Not telling yet.
-}
-\source{
-Beatrix Beisner
-}
-\keyword{datasets}
